tests/rosetta/out/Fortran/concurrent-computing-3.error
gfortran: exit status 1
/tmp/concurrent-computing-3.f90:14:21:

   14 |       w = shuffle((/'Enjoy','Rosetta','Code'/))(i0)
      |                     1
Error: Invalid character in name at (1)
/tmp/concurrent-computing-3.f90:24:14:

   24 |     i = (size(arr) - 1)
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/concurrent-computing-3.f90:26:14:

   26 |       j = mod(now(),((i + 1)))
      |              1
Error: Function ‘now’ at (1) has no IMPLICIT type
/tmp/concurrent-computing-3.f90:13:38:

   13 |     do i0 = 1, size(shuffle((/'Enjoy','Rosetta','Code'/)))
      |                                      1
Error: Different CHARACTER lengths (5/7) in array constructor at (1)
