tests/rosetta/out/Fortran/concurrent-computing-3.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program concurrent_computing_3
  implicit none
  integer :: i
    integer :: w
    integer :: i0
    integer :: arr
    integer :: j
    integer :: tmp
  i = 0
  do while ((i < 3))
    print *, ''
    do i0 = 1, size(shuffle((/'Enjoy','Rosetta','Code'/)))
      w = shuffle((/'Enjoy','Rosetta','Code'/))(i0)
      print *, w
    end do
    i = (i + 1)
  end do
  
  contains
  recursive integer function shuffle(xs) result(res)
    integer, intent(in) :: xs
    arr = xs
    i = (size(arr) - 1)
    do while ((i > 0))
      j = mod(now(),((i + 1)))
      tmp = arr(((i)+1))
      arr(((i)+1)) = arr(((j)+1))
      arr(((j)+1)) = tmp
      i = (i - 1)
    end do
    res = arr
    return
  end function shuffle
end program concurrent_computing_3
